# purechess

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  .posthog-events.json  .prettierignore  .session-06-plan.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  design.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  posthog-setup-report.md  prettier.config.js  skills-lock.json  tsconfig.base.json  tsconfig.scripts.json
.github/workflows/: ci.yml  deploy.yml
.opencode/: commands
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md  token-ledger.json
.wolf/hooks/: _session.json
apps/api/: .env.example  Dockerfile  README.md  eslint.config.mjs  fly.toml  jest.e2e.config.js  nest-cli.json  package.json  tsconfig.json  tsconfig.seed.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/scripts/: README.md  gen-synthetic-puzzles.ts  seed-e2e-fixtures.ts  seed-perf-fixtures.ts  seed-puzzles.ts
apps/api/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/web/: Dockerfile  README.md  fly.toml  next.config.js  next.config.mjs  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/.wolf/: memory.md
apps/web/e2e/: global-setup.js  global-teardown.js  playwright.config.ts
apps/web/public/: openings.json
apps/web/scripts/: build-pure-pieces.mjs  build-sculpted-pieces.mjs
crates/purechess-engine/: Cargo.toml  README.md  package.json
crates/purechess-engine/benches/: perft.rs
crates/purechess-engine/src/: board.rs  error.rs  fen.rs  ffi.rs  lib.rs  moves.rs  pgn.rs  result.rs  types.rs
crates/purechess-engine/tests/: fen_roundtrip.rs  parity.rs  perft.rs  result_detection.rs
crates/purechess-engine/tests/fixtures/: perft_cases.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  HANDOFF-next-level.md  RELEASE_CHECKLIST.md
docs/adr/: ADR-6-local-puzzle-bank-and-per-user-puzzle-glicko.md  ADR-7-insights-as-pure-detectors.md
docs/claude-sessions/purchess-mvp/: .epic-dag-plan.bash  .epic-status.json  .session-1-plan.md  .session-12-plan.md  .session-16-plan.md  .session-2-plan.md  .session-3-plan.md  .session-4-plan.md  .session-5-plan.md  session-00-operator-rules.md  session-01-project-scaffolding.md  session-02-database-prisma.md  session-03-design-system.md  session-04-authentication.md  session-05-chess-engine-core.md  session-06-realtime-infrastructure.md  session-07-users-profiles.md  session-08-game-service-gateway.md  session-09-matchmaking.md  session-10-rating-system.md  (+15 more)
docs/epics/: purchess-mvp.md  purechess-improve.md
docs/runbooks/: engine-cutover.md  puzzle-db-refresh.md
infra/: RUNBOOK.md  env.example.ts
scripts/: build-engine.sh  build-openings.mjs  check-env.sh  db-backup.sh  generate-logos.mjs  generate-traces.ts  shadow-runner.ts  smoke.sh  upload-sourcemaps.sh  validate-dag.py
(+793 files in other folders)
