[workspace]
resolver = "2"
members = ["crates/purechess-engine"]

# Single source of truth for dependency versions across the Rust workspace.
# Exact resolved versions are pinned in Cargo.lock (committed) and recorded in
# docs/roadmap/rust-engine-migration/session-01-handoff.md.
[workspace.dependencies]
shakmaty = "0.27"
thiserror = "2.0"
arrayvec = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Project-wide lints, inherited by member crates via `[lints] workspace = true`.
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
